--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -17,3 +17,9 @@ body {
     background-color: hsla(160, 100%, 37%, 0.2);
   }
 }
+#app {
+  max-width: 1024px;
+  margin: 0 auto;
+  padding: 10px;
+  text-align: center;
+}
